--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,52 @@ img {
   display: block;
   max-width: 100%;
 }
+
+button {
+  width: 100px;
+  height: 50px;
+  padding: 10px 15px;
+  font-size: 16px;
+  text-transform: uppercase;
+  border: 1px solid black;
+  border-radius: 0;
+  cursor: pointer;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+#datetime-picker {
+  height: 30px;
+  padding: 5px;
+  border: none;
+  outline: 1px solid rgba(150, 150, 149, 0.4);
+  border-radius: 5px;
+}
+
+.input-btn {
+  height: 30px;
+  padding: 0;
+  background-color: rgba(150, 150, 149, 0.2);
+  border: none;
+  border-radius: 5px;
+}
+
+.timer {
+  display: flex;
+  gap: 20px;
+  text-transform: uppercase;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 40px;
+}
